--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                               <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
                               <div class="card-body">
                                   <h4 class="card-title">Product title</h4>
-                                  <h6>Rp.....</h6>
+                                  <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
                                   <div class="star">
                                       <span class="fa fa-star checked"></span>
                                       <span class="fa fa-star checked"></span>
@@ -118,13 +118,13 @@
                                   </div>
                               </div>
                             </div>
-                        </div>                         
+                        </div>
                         <div class="col-sm">
                             <div class="card">
                               <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
                               <div class="card-body">
                                   <h4 class="card-title">Product title</h4>
-                                  <h6>Rp.....</h6>
+                                  <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
                                   <div class="star">
                                       <span class="fa fa-star checked"></span>
                                       <span class="fa fa-star checked"></span>
@@ -134,13 +134,13 @@
                                   </div>
                               </div>
                             </div>
-                        </div>                         
+                        </div>
                         <div class="col-sm">
                             <div class="card">
                               <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
                               <div class="card-body">
                                   <h4 class="card-title">Product title</h4>
-                                  <h6>Rp.....</h6>
+                                  <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
                                   <div class="star">
                                       <span class="fa fa-star checked"></span>
                                       <span class="fa fa-star checked"></span>
@@ -150,13 +150,13 @@
                                   </div>
                               </div>
                             </div>
-                        </div>                         
+                        </div>
                         <div class="col-sm">
                             <div class="card">
                               <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
                               <div class="card-body">
                                   <h4 class="card-title">Product title</h4>
-                                  <h6>Rp.....</h6>
+                                  <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
                                   <div class="star">
                                       <span class="fa fa-star checked"></span>
                                       <span class="fa fa-star checked"></span>
@@ -166,13 +166,13 @@
                                   </div>
                               </div>
                             </div>
-                        </div>                         
+                        </div>
                         <div class="col-sm">
                             <div class="card">
                               <img class="card-img-top" src="https://dummyimage.com/600x400/55595c/fff" alt="Card image cap">
                               <div class="card-body">
                                   <h4 class="card-title">Product title</h4>
-                                  <h6>Rp.....</h6>
+                                  <p style="color:#EE5A24" class="text-lg"><strike style="color:gray" class="text-xl">Rp69000</strike> Rp.....</p>                                 
                                   <div class="star">
                                       <span class="fa fa-star checked"></span>
                                       <span class="fa fa-star checked"></span>
@@ -182,8 +182,8 @@
                                   </div>
                               </div>
                             </div>
-                        </div>                         
-                      </div>
+                        </div>
+                      </div>                           
                   </div>
               <!-- </div> -->
           </div>
@@ -192,7 +192,7 @@
         <div class="row mt-5">
             <div class="col-sm">
                 <!-- <div class="card"> -->
-                  <div class="judul text-uppercase mt-2">
+                  <div class="judul text-uppercase mt-5">
                     <p style="color:white">Best Product</p> 
                     <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
                   </div>
@@ -391,14 +391,14 @@
           <div class="row">
               <div class="col-6 mt-3">
                   <h5>About</h5>
-                  <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+                  <!-- <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25"> -->
                   <p class="mb-0">
                       Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
                   </p>
               </div>
               <div class="col-3 offset-md-3 mt-3">
                   <h5>Find me on</h5>
-                  <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25">
+                  <!-- <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25"> -->
                   <div class="sosmed">
                       <span><a class="btn btn-lg" href="#">
                           <i class="fab fa-facebook-square"></i> 
