--- a/product.html
+++ b/product.html
@@ -14,20 +14,26 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <section class="jumbotron text-center">
-        <div class="container">
-            <h1 class="jumbotron-heading">Product details</h1>
-            <div class="row">
-                <div class="col">
-                    <nav aria-label="breadcrumb text-center">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a href="/">Home</a></li>
-                            <li class="breadcrumb-item active " aria-current="page">Product details</li>
-                        </ol>
-                    </nav>
+   
+    <div class="ht__bradcaump__area" style="background: rgba(0, 0, 0, 0) url(images/bg/2.jpg) no-repeat scroll center center / cover ;">
+        <div class="ht__bradcaump__wrap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="bradcaump_inner text-center">
+                            <h2 class="bradcaump-title">Product Details</h2>
+                            <nav class="bradcaump-inner home">
+                            <a class="breadcrumb-item" href="index.html">Home</a>
+                            <span class="brd-separetor">/</span>
+                            <span class="breadcrumb-item active">Product Details</span>
+                            </nav>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
+        <section class="text-center">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
@@ -37,30 +43,131 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 add_to_cart_block">
-                    <div class="card bg-light mb-3">
-                        <div class="card-body">
-                            <h2 class="text-left">Nama Product</h2>
-                            <div class="reviews_product p-3 mb-2 text-left">
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star checked"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span class="fa fa-star"></span>
-                                    <span> (based on ratings) </span> 
-                                <p class="detail_prices"> Rp 15.000.000</p>
-                             </div>
-                             <ul class="btn">
-                                <li class="buy__now__btn">
-                                    <a href="#"><b>buy now</b></a>
-                                </li>
-                             </ul>
+            <div class="col-12 col-lg-6 add_to_cart_block">
+                <div class="card bg-light mb-3">
+                    <div class="card-body">
+                        <h2 class="text-left">Nama Product</h2>
+                        <div class="reviews_product p-3 mb-2 text-left">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span> (based on ratings) </span> 
+                            <p class="detail_prices"> Rp 15.000.000</p>
+                        </div>
+                        <div class="btn buy_now_btn">
+                            <a href="#"><b>buy now</b></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+<section class="text-center  pt--120">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-lg-12 col-sm-12">
+                <ul class="nav product_deatils_tab mb--60" role="tablist">
+                <li role="presentation" class="active">
+                    <a class="active" href="#description" role="tab" data-toggle="tab">Description</a>
+                </li>
+                <li role="presentation">
+                    <a href="#reviews" role="tab" data-toggle="tab">Reviews</a>
+                </li>
+            </ul>  
+           <div class="row">
+               <div class="col-md-12">
+                   <div class="product_deatils_tab_content">
+                        <div role="tabpanel" id="description" class="product_tab_content active">
+                        <div class="product_description_wrap">
+                            <div class="product_desc">
+                                <h2 class="title_6">Details</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis noexercit ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.</p>
+                        </div>
+                   </div>
+               </div>
+               <div role="tabpanel" id="reviews" class="product_tab_content">
+                   <div class="review_address_inner">
+                       <div class="pro_review">
+                           <div class="review_thumb">
+                               <img class="icon-person" src="img/person.jpeg" alt="">
+                           </div>
+                           <div class="review_details">
+                               <div class="review_info">
+                                   <h4>safira auliar</h4>
+                                   <ul class="rating">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                   </ul>
+                               </div>
+                               <div class="review_date">
+                                   <span>13 Des, 2019 at: 02:30pm</span>
+                               </div>
+                               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit tempora ab assumenda at veritatis pariatur recusandae, distinctio mollitia quisquam tempore eligendi doloribus ipsam libero facilis sit earum fuga quia.</p>
+                           </div>
+                       </div>
+                       <div class="pro_review">
+                            <div class="review_thumb">
+                                <img class="icon-person" src="img/person.jpeg" alt="">
+                            </div>
+                            <div class="review_details">
+                                <div class="review_info">
+                                    <h4>safira auliar</h4>
+                                    <ul class="rating">
+                                         <span class="fa fa-star checked"></span>
+                                         <span class="fa fa-star checked"></span>
+                                         <span class="fa fa-star checked"></span>
+                                         <span class="fa fa-star"></span>
+                                         <span class="fa fa-star"></span>
+                                    </ul>
+                                </div>
+                                <div class="review_date">
+                                    <span>13 Des, 2019 at: 02:30pm</span>
+                                </div>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit tempora ab assumenda at veritatis pariatur recusandae, distinctio mollitia quisquam tempore eligendi doloribus ipsam libero facilis sit earum fuga quia.</p>
+                            </div>
+                        </div>
+                   </div>
+                   <div class="rating_wrap">
+                       <h2 class="rating-title">Write a review</h2>
+                       <h4 class="rating-title-2">Your Rating</h4>
+                       <ul class="rating1">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                       </ul>
+                   </div>
+                   <div class="review_box">
+                       <form id="review-form">
+                           <div class="single-review-form">
+                               <div class="review-box name">
+                                   <input type="text" placeholder="Type your name">
+                                   <input type="email" placeholder="Type your email">
+                               </div>
+                           </div>
+                           <div class="single-review-form">
+                               <div class="review-box message">
+                                   <textarea placeholder="Write your message"></textarea>
+                               </div>
+                           </div>
+                           <div class="review-btn">
+                               <a class="fv-btn" href="#">submit review</a>
+                           </div>
+                       </form>
+                   </div>
+                </div>
+           </div>
+        </div>
+    </div>
+</section>
+
 
 
 
