--- a/product.html
+++ b/product.html
@@ -54,7 +54,12 @@
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                                 <span> (based on ratings) </span> 
-                            <p class="detail_prices"> Rp 15.000.000</p>
+                            <p class="prices"> Rp 15.000.000</p>
+                            <p><b>Availability :</b> In Stock</p>
+                            <p><b>Condition :</b> New</p>
+                            <p><b>Brand :</b> snsv</p>
+
+
                         </div>
                         <div class="btn buy_now_btn">
                             <a href="#"><b>buy now</b></a>
@@ -157,7 +162,7 @@
                                    <textarea placeholder="Write your message"></textarea>
                                </div>
                            </div>
-                           <div class="review-btn">
+                           <div class="btn buy_now_btn">
                                <a class="fv-btn" href="#">submit review</a>
                            </div>
                        </form>
