--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Navigasi Bar -->
   <nav class="navbar navbar-expand-lg bg-custom">
     <div class="container">
-      <a class="navbar-brand" href="#">Hikari Comp</a>
+      <a class="navbar-brand" href="index.html">Hikari Comp</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,10 +32,10 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Store</a>
+            <a class="nav-link" href="store.html">Store</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
           
         </ul>
@@ -43,14 +43,13 @@
             <div class="input-group input-group-sm">
                 <input type="text" class="form-control" placeholder="Search...">
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-secondary btn-number">
+                    <button type="button" class="btn btn-light btn-number">
                         <i class="fa fa-search"></i>
                     </button>
                 </div>
             </div>
             <a class="btn btn-lg ml-2" href="cart.html">
                 <i class="fa fa-shopping-cart"></i> 
-                <span class="badge badge-light">3</span>
             </a>
         </form>
       </div>
