--- a/product.html
+++ b/product.html
@@ -58,24 +58,11 @@
           </div>
         </div>
       </nav>
-    <div class="ht__bradcaump__area" style="background: rgba(0, 0, 0, 0) url(images/bg/2.jpg) no-repeat scroll center center / cover ;">
-        <div class="ht__bradcaump__wrap">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="bradcaump_inner text-center">
-                            <h2 class="bradcaump-title">Product Details</h2>
-                            <nav class="bradcaump-inner home">
-                            <a class="breadcrumb-item" href="index.html">Home</a>
-                            <span class="brd-separetor">/</span>
-                            <span class="breadcrumb-item active">Product Details</span>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+      <nav class="bradcaump-inner home">
+            <a class="breadcrumb-item" href="index.html">Home</a>
+            <span class="brd-separetor">/</span>
+            <span class="breadcrumb-item active">Product Details</span>
+            </nav>
     <!-- card image -->
     <section class="text-center">
             <div class="container">
@@ -139,79 +126,88 @@
                 </div>
                 <!-- tab review  -->
                 <div role="tabpanel" id="reviews" class="product_tab_content">
-                    <div class="review_address_inner">
-                        <div class="pro_review">
-                            <div class="review_thumb">
-                                <img class="icon-person" src="img/person.jpeg" alt="">
-                            </div>
-                            <div class="review_details">
-                                <div class="review_info">
-                                    <h4>safira auliar</h4>
-                                    <ul class="rating">
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
+                        <ul class="list-unstyled text-justify mt-30">
+                            <li class="media">
+                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                <div class="media-body">
+                                <h5 class="mb-0 name">safiraauliar</h5>
+                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                <ul class="rating mb-0 mt-0">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
                                     </ul>
+                                <p class="text">
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                </p> 
                                 </div>
-                                <div class="review_date">
-                                    <span>13 Des, 2019 at: 02:30pm</span>
+                            </li>
+                            <li class="media my-4">
+                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                <div class="media-body">
+                                <h5 class="mb-0 name">safiraauliar</h5>
+                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                <ul class="rating mb-0 mt-0">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </ul>
+                                    <p class="text">
+                                    Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </p> 
                                 </div>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit tempora ab assumenda at veritatis pariatur recusandae, distinctio mollitia quisquam tempore eligendi doloribus ipsam libero facilis sit earum fuga quia.</p>
-                            </div>
+                            </li>
+                            <li class="media">
+                                <img src="img/person.jpeg" class="mr-3 icon-person" alt="...">
+                                <div class="media-body">
+                                <h5 class="mb-0 name">safiraauliar</h5>
+                                <p class="mb-0 date">13 Des, 2019 at: 02:30pm</p>
+                                <ul class="rating mb-0 mt-0">
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star checked"></span>
+                                        <span class="fa fa-star"></span>
+                                        <span class="fa fa-star"></span>
+                                    </ul>
+                                    <p class="text">
+                                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+                                    </p> 
+                                </div>
+                            </li>
+                              </ul>
+                            <div class="rating_wrap">
+                            <h2 class="rating-title">Write a review</h2>
+                            <h4 class="rating-title-2">Your Rating</h4>
+                            <ul class="rating1">
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                            </ul>
                         </div>
-                        <div class="pro_review">
-                                <div class="review_thumb">
-                                    <img class="icon-person" src="img/person.jpeg" alt="">
-                                </div>
-                                <div class="review_details">
-                                    <div class="review_info">
-                                        <h4>safira auliar</h4>
-                                        <ul class="rating">
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star checked"></span>
-                                            <span class="fa fa-star"></span>
-                                            <span class="fa fa-star"></span>
-                                        </ul>
-                                    </div>
-                                    <div class="review_date">
-                                        <span>13 Des, 2019 at: 02:30pm</span>
-                                    </div>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus odit tempora ab assumenda at veritatis pariatur recusandae, distinctio mollitia quisquam tempore eligendi doloribus ipsam libero facilis sit earum fuga quia.</p>
-                                </div>
-                            </div>
-                    </div>
-                    <div class="rating_wrap">
-                        <h2 class="rating-title">Write a review</h2>
-                        <h4 class="rating-title-2">Your Rating</h4>
-                        <ul class="rating1">
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                        </ul>
-                    </div>
-                    <div class="review_box">
+                    <div class="container">
                         <form id="review-form">
-                            <div class="single-review-form">
-                                <div class="review-box name">
-                                    <input type="text" placeholder="Type your name">
-                                    <input type="email" placeholder="Type your email">
+                            <div class="row">
+                                <div class="col">
+                                <input type="text" class="form-control" placeholder="Your Name">
                                 </div>
-                            </div>
-                            <div class="single-review-form">
-                                <div class="review-box message">
-                                    <textarea placeholder="Write your message"></textarea>
+                                <div class="col">
+                                <input type="text" class="form-control" placeholder="Email">
                                 </div>
+                            </div>     
+                            <div class="form-group">
+                                <textarea class="form-control mt-30" id="exampleFormControlTextarea1" rows="5" placeholder="write Your Message"></textarea>
                             </div>
                             <div class="btn buy_now_btn">
                                 <a class="fv-btn" href="#">submit review</a>
                             </div>
-                            </form>
-                        </div>
+                        </form>
+                    </div>
                     </div>
                  </div>
             </div>
