--- a/cart.html
+++ b/cart.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-custom">
         <div class="container">
-          <a class="navbar-brand" href="index.html">Hikari Comp</a>
+          <a class="navbar-brand font-weight-bold" href="index.html">Hikari Comp</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -153,11 +153,44 @@
                   </div>
                   <div class="col-sm-12 col-md-6 text-right">
                       <h5 class="text-left"><span class="font-weight-bold">Total </span><span class="total"> Rp 260000</span></h5>
-                      <a class="btn btn-block btn-orange text-white mt-3">Checkout</a>
+                      <a class="btn btn-block btn-success text-white mt-3">Checkout</a>
                   </div>
               </div>
           </div>
       </div>
+  </div>
+  <div class="futer mt-footer">
+    <footer class="text-light bg-custom">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 mt-4">
+                    <h5>About Us</h5>
+                    <p class="mb-0">
+                        Hikari-Comp adalah sebuah toko online computer di semarang. Kami menyediakan berbagai jenis merek laptop dan komputer yang kualitasnya sudah tidak diragukan lagi
+                    </p>
+                </div>
+                <div class="col-md-3 col-sm-12 offset-md-3 mt-4">
+                    <h5>Find me on</h5>
+                    <div class="sosmed">
+                        <span><a href="http://facebook.com/hikaricomp">
+                            <i class="fab fa-facebook-square fa-3x mr-2"></i> 
+                        </a></span>                 
+                        <span> <a href="http://instagram.com/hikaricomp">
+                            <i class="fab fa-instagram fa-3x mr-2"></i> 
+                        </a></span>                 
+                        <span> <a href="http://twitter.com/hikaricomp">
+                            <i class="fab fa-twitter fa-3x"></i> 
+                        </a></span>                 
+                    </div>
+                </div>
+                <div class="offset-md-11 col-md-1 col-sm-12 copyright mt-3">
+                    <p class="float-left">
+                      <a href="#" class="btn text-white"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
