--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Navigasi Bar -->
   <nav class="navbar navbar-expand-lg bg-custom">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Hikari Comp</a>
+      <a class="navbar-brand font-weight-bold" href="index.html">Hikari Comp</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -91,7 +91,7 @@
         </div>
     </div>
       <!-- produk -->
-  <!-- <div class="container mt-3"> -->
+  <div class="container-fluid mt-3"> 
       <div class="row mt-5">
           <div class="col-sm">
               <!-- <div class="card"> -->
@@ -382,38 +382,36 @@
               <!-- </div> -->
           </div>
       </div>
-  <!-- </div> -->
+  </div> 
   
   <!-- Footer -->
-<div class="futer">
+<div class="futer mt-footer">
   <footer class="text-light bg-custom">
       <div class="container">
           <div class="row">
-              <div class="col-6 mt-3">
-                  <h5>About</h5>
-                  <!-- <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25"> -->
+              <div class="col-md-6 col-sm-12 mt-4">
+                  <h5>About Us</h5>
                   <p class="mb-0">
-                      Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression.
+                      Hikari-Comp adalah sebuah toko online computer di semarang. Kami menyediakan berbagai jenis merek laptop dan komputer yang kualitasnya sudah tidak diragukan lagi
                   </p>
               </div>
-              <div class="col-3 offset-md-3 mt-3">
+              <div class="col-md-3 col-sm-12 offset-md-3 mt-4">
                   <h5>Find me on</h5>
-                  <!-- <hr class="bg-white mb-2 mt-0 d-inline-block mx-auto w-25"> -->
                   <div class="sosmed">
-                      <span><a class="btn btn-lg" href="#">
-                          <i class="fab fa-facebook-square"></i> 
+                      <span><a href="http://facebook.com/hikaricomp">
+                          <i class="fab fa-facebook-square fa-3x mr-2"></i> 
                       </a></span>                 
-                      <span> <a class="btn btn-lg" href="#">
-                          <i class="fab fa-instagram"></i> 
+                      <span> <a href="http://instagram.com/hikaricomp">
+                          <i class="fab fa-instagram fa-3x mr-2"></i> 
                       </a></span>                 
-                      <span> <a class="btn btn-lg" href="#">
-                          <i class="fab fa-github"></i> 
+                      <span> <a href="http://twitter.com/hikaricomp">
+                          <i class="fab fa-twitter fa-3x"></i> 
                       </a></span>                 
                   </div>
               </div>
-              <div class="col-12 copyright mt-3">
+              <div class="offset-md-11 col-md-1 col-sm-12 copyright mt-3">
                   <p class="float-left">
-                    <a href="#" class="btn btn-primary btn-block">Back to top</a>
+                    <a href="#" class="btn text-white"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
                   </p>
               </div>
           </div>
