--- a/cart.html
+++ b/cart.html
@@ -39,7 +39,7 @@
               </li>
               
             </ul>
-            <form class="form-inline my-2 my-lg-0">
+            <form class="form-inline my-2 my-lg-0 mr-2">
                 <div class="input-group input-group-sm">
                     <input type="text" class="form-control" placeholder="Search...">
                     <div class="input-group-append">
@@ -48,8 +48,8 @@
                         </button>
                     </div>
                 </div>
-                <a class="btn btn-lg ml-2" href="cart.html">
-                    <i class="fa fa-shopping-cart"></i> 
+                <a class="ml-2" href="cart.html">
+                    <i class="fa fa-shopping-cart fa-lg"></i> 
                 </a>
             </form>
           </div>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="offset-md-11 col-md-1 col-sm-12 copyright mt-3">
                     <p class="float-left">
-                      <a href="#" class="btn text-white"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
+                      <a href="#" class="text-white"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
                     </p>
                 </div>
             </div>
