--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,126 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+  <link rel="stylesheet" href="css/custom.css">
+  <title>Store</title>
 </head>
 <body>
-  
+    <nav class="navbar navbar-expand-lg bg-custom">
+        <div class="container">
+          <a class="navbar-brand font-weight-bold" href="index.html">Hikari Comp</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Merk
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Lenovo</a>
+                  <a class="dropdown-item" href="#">Asus</a>
+                  <!-- <div class="dropdown-divider"></div> -->
+                  <a class="dropdown-item" href="#">Mac</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="store.html">Store</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+              
+            </ul>
+            <form class="form-inline my-2 my-lg-0 mr-2">
+                <div class="input-group input-group-sm">
+                    <input type="text" class="form-control" placeholder="Search...">
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-light btn-number">
+                            <i class="fa fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+                <a class="ml-2" href="cart.html">
+                    <i class="fa fa-shopping-cart fa-lg"></i> 
+                </a>
+            </form>
+          </div>
+        </div>
+      </nav>
+  <div class="container mt-5">
+    <div class="row">
+        <div class="col">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb bg-white">
+                    <li class="breadcrumb-item"><a href="index.html" class="text-link">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Contact</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-6 my-auto">
+        <div class="card p-5">
+          <h3 class="text-center">Send us a message</h3>
+          <form>
+            <div class="form-group">
+              <label for="exampleInputName1">Name</label>
+              <input type="text" class="form-control" id="exampleInputName1" >
+            </div>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" >
+            </div>  
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Message</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="mt-4">
+              <button class="btn btn-orange text-white">Send</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="futer mt-footer">
+    <footer class="text-light bg-custom">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 mt-4">
+                    <h5>About Us</h5>
+                    <p class="mb-0">
+                        Hikari-Comp adalah sebuah toko online computer di semarang. Kami menyediakan berbagai jenis merek laptop dan komputer yang kualitasnya sudah tidak diragukan lagi
+                    </p>
+                </div>
+                <div class="col-md-3 col-sm-12 offset-md-3 mt-4">
+                    <h5>Find me on</h5>
+                    <div class="sosmed">
+                        <span><a href="http://facebook.com/hikaricomp">
+                            <i class="fab fa-facebook-square fa-3x mr-2"></i> 
+                        </a></span>                 
+                        <span> <a href="http://instagram.com/hikaricomp">
+                            <i class="fab fa-instagram fa-3x mr-2"></i> 
+                        </a></span>                 
+                        <span> <a href="http://twitter.com/hikaricomp">
+                            <i class="fab fa-twitter fa-3x"></i> 
+                        </a></span>                 
+                    </div>
+                </div>
+                <div class="offset-md-11 col-md-1 col-sm-12 copyright mt-3">
+                    <p class="float-left">
+                      <a href="#" class="text-white"><i class="fas fa-arrow-circle-up fa-3x"></i></a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+  </div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
