--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Navigasi Bar -->
   <nav class="navbar navbar-expand-lg bg-custom">
     <div class="container">
-      <a class="navbar-brand font-weight-bold" href="index.html">Hikari Comp</a>
+      <a class="navbar-brand font-weight-bold ml-0" href="index.html">Hikari Comp</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
