--- a/store.html
+++ b/store.html
@@ -66,7 +66,7 @@
         <div class="col">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb bg-white">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="index.html" class="text-link">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Store</li>
                 </ol>
             </nav>
