--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
               Merk
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Lenovo</a>
-              <a class="dropdown-item" href="#">Asus</a>
+              <a class="dropdown-item" href="lenovo.html">Lenovo</a>
+              <a class="dropdown-item" href="asus.html">Asus</a>
               <!-- <div class="dropdown-divider"></div> -->
-              <a class="dropdown-item" href="#">Mac</a>
+              <a class="dropdown-item" href="mac.html">Mac</a>
             </div>
           </li>
           <li class="nav-item">
